@@ -1,12 +1,12 @@
 [Genius Plugin]
 Name=Test Plugin
 Description=A very basic testing plugin for genius
-Author=George Lebl
-Copyright=Copyright 1999 George Lebl
-File=@libdir@/genius/libtestplugin.so
+Author=Jiri (George) Lebl
+Copyright=Copyright 1999 Jiri (George) Lebl
+File=@libdir@/genius/libtestplugin
 GUI=false
 
 # This is so that this plugin doesn't appear in the gui
 # if you write your own plugin it should have Hide=false or
-# just not include this entry
+# just not include this line
 Hide=true
